--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lry-kT-0NG">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="T41-u1-oQA">
+            <objects>
+                <tableViewController id="3YY-Ir-nsP" customClass="UserTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="48G-6J-Vqq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="72" id="d35-uC-5q6" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="72"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d35-uC-5q6" id="N8Y-cL-k3d">
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="71.666666666666671"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="wCD-VU-8IS">
+                                            <rect key="frame" x="20" y="16" width="348" height="40"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lambda_Logo_Full" translatesAutoresizingMaskIntoConstraints="NO" id="XOQ-Tu-qXD">
+                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="XHC-HS-kbC"/>
+                                                        <constraint firstAttribute="width" constant="40" id="yiP-lg-FOS"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title First and Last Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r85-kv-rdX">
+                                                    <rect key="frame" x="61" y="0.0" width="287" height="40"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="wCD-VU-8IS" firstAttribute="leading" secondItem="N8Y-cL-k3d" secondAttribute="leadingMargin" id="AKD-yF-BaB"/>
+                                        <constraint firstItem="wCD-VU-8IS" firstAttribute="centerY" secondItem="N8Y-cL-k3d" secondAttribute="centerY" id="Ht5-Oc-olV"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="wCD-VU-8IS" secondAttribute="trailing" id="cGU-gB-YQU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="r85-kv-rdX" id="8um-bK-dnO"/>
+                                    <outlet property="userImageView" destination="XOQ-Tu-qXD" id="txU-Af-SqD"/>
+                                    <segue destination="cYE-W9-kjH" kind="show" id="cRi-G4-MNT"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="3YY-Ir-nsP" id="eCi-6y-yKl"/>
+                            <outlet property="delegate" destination="3YY-Ir-nsP" id="fAq-L6-vlg"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="579-sW-00T"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TVn-gC-Bh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="926.08695652173924" y="160.71428571428569"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="EI8-Jb-mzt">
+            <objects>
+                <viewController id="cYE-W9-kjH" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pNP-p3-4L5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lambda_Logo_Full" translatesAutoresizingMaskIntoConstraints="NO" id="HlY-kd-sca">
+                                <rect key="frame" x="50" y="138" width="314" height="314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="HlY-kd-sca" secondAttribute="height" multiplier="1:1" id="asJ-X9-OUu"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f4G-YQ-WJR">
+                                <rect key="frame" x="50" y="512" width="314" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lK2-3q-eqM">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(555) 555-5555" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lrG-Ke-ZPo">
+                                        <rect key="frame" x="0.0" y="28.333333333333371" width="314" height="19.333333333333329"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="someUser@place.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujA-a0-k1S">
+                                        <rect key="frame" x="0.0" y="55.666666666666636" width="314" height="19.333333333333336"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DTk-57-7OA" firstAttribute="trailing" secondItem="f4G-YQ-WJR" secondAttribute="trailing" constant="50" id="2jc-dp-H5S"/>
+                            <constraint firstItem="HlY-kd-sca" firstAttribute="top" secondItem="DTk-57-7OA" secondAttribute="top" constant="50" id="5jC-CV-BTK"/>
+                            <constraint firstItem="HlY-kd-sca" firstAttribute="centerX" secondItem="pNP-p3-4L5" secondAttribute="centerX" id="EKg-Tp-KcF"/>
+                            <constraint firstItem="f4G-YQ-WJR" firstAttribute="leading" secondItem="DTk-57-7OA" secondAttribute="leading" constant="50" id="M5f-e4-ofD"/>
+                            <constraint firstItem="HlY-kd-sca" firstAttribute="leading" secondItem="DTk-57-7OA" secondAttribute="leading" constant="50" id="WEQ-is-GeO"/>
+                            <constraint firstItem="f4G-YQ-WJR" firstAttribute="width" secondItem="HlY-kd-sca" secondAttribute="width" id="adl-8Z-qLm"/>
+                            <constraint firstItem="DTk-57-7OA" firstAttribute="trailing" secondItem="HlY-kd-sca" secondAttribute="trailing" constant="50" id="f8h-Q4-M0S"/>
+                            <constraint firstItem="f4G-YQ-WJR" firstAttribute="top" secondItem="HlY-kd-sca" secondAttribute="bottom" constant="60" id="yUa-hZ-Lin"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="DTk-57-7OA"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="ujA-a0-k1S" id="h4L-Kh-KIe"/>
+                        <outlet property="nameLabel" destination="lK2-3q-eqM" id="zGa-qa-srf"/>
+                        <outlet property="phoneLabel" destination="lrG-Ke-ZPo" id="ZTv-qx-NFJ"/>
+                        <outlet property="userImageView" destination="HlY-kd-sca" id="Opm-VS-Q2k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="keg-np-TJG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1694" y="161"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1do-AJ-i0L">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lry-kT-0NG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NyT-qt-1F2">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3YY-Ir-nsP" kind="relationship" relationship="rootViewController" id="ELR-GF-6tj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="98S-pi-bzi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="154" y="161"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="Lambda_Logo_Full" width="574" height="249"/>
+    </resources>
 </document>
